tests/types/errors/legacy_typed_class_member.mog
type Box struct {
  i32 value
}
